<resources>
    <string name="language">中文</string>
    <string name="create_account">Create Account</string>
    <string name="recover_account">Import Account</string>
    <string name="account_name_tag">Account Name</string>
    <string name="please_input_password_tag">Please input password</string>
    <string name="login">Login</string>
    <string name="create_wallet_account">Create Account</string>
    <string name="repeat_input_txt">Please input your password again</string>
    <string name="create">Create</string>
    <string name="please_input_mnemonic">Please input your seed phrase</string>
    <string name="password_not_equal">Please enter the same password!</string>
    <string name="backup_mnemonic">Backup Seed Phrase</string>
    <string name="memorized_mnemonic">Backed up</string>
    <string name="regenerate_mnemonic">Regenerate</string>
    <string name="me_tag">Me</string>
    <string name="manage_wallet">Wallet Management</string>
    <string name="tx_record_tag">Transaction History</string>
    <string name="get_quota_tag">Get Quota</string>
    <string name="using_setup">Settings</string>
    <string name="reward_query">Reward Enquiry</string>
    <string name="about_us">About Us</string>
    <string name="copy_success">Successfully copied!</string>
    <string name="password_error">Wrong password!</string>
    <string name="acc_name_can_not_blank">User name cannot be blank</string>
    <string name="recover_success">import success</string>
    <string name="undefined_error">Unknown error</string>
    <string name="error_mnemonic">Incorrect seed phrase!</string>
    <string name="already_exist_same_account">The seed phrase you input has already had an account name "%1$s" on
        current
        device, are you sure you would like to overwrite existed account
    </string>
    <string name="cancel">Cancel</string>
    <string name="replace">Replace</string>
    <string name="account_name_duplicate">The account name has already existed</string>
    <string name="address_manage">Address Management</string>
    <string name="eth_address_manage">My ETH address</string>
    <string name="address_list">Addresses</string>
    <string name="add_address">Add Address</string>
    <string name="addr_list_infor_text">An account can only generate maximum 100 addresses!</string>
    <string name="choose_wallet_account">Select wallet account</string>
    <string name="switch_to_12">Switch to 12 mnemonic words</string>
    <string name="switch_to_24">Switch to 24 mnemonic words</string>
    <string name="logoutandswitch">Logout/switch wallet</string>
    <string name="receive_token">Receive</string>
    <string name="transfer_token">Send</string>
    <string name="my_address">Address</string>
    <string name="my_acc_balance">Balance</string>
    <string name="receive_address">Recipient Address</string>
    <string name="money_amount">Amount</string>
    <string name="pledge_amount_min_134_vite">Please input amount, minimum 134 VITE</string>
    <string name="pledge_amount_must_bigger_134">Stake amount should not be less than 134</string>
    <string name="remark_memo">Memo</string>
    <string name="input_address_not_valid">Wrong address, please check the format</string>
    <string name="please_input_correct_amount">Please input correct amount</string>
    <string name="balance_not_enough">Insufficient Balance</string>
    <string name="this_token_max_input_number_decimal">%1$s supports up to maximum %2$d decimal digits</string>
    <string name="remark_text_too_long">The length of notes has reached limitations</string>
    <string name="pay">Payment</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_pay">Confirm</string>
    <string name="viteaddress_digits">vite_1234567890abcdef</string>
    <string name="quota_not_enough">Insufficient Quota</string>
    <string name="get_quota_title">Get Quota</string>
    <string name="run_pow">Computing PoW to Secure Quota for this Transaction…</string>
    <string name="pledge_vite">Stake VITE</string>
    <string name="transfer_token_success">Success</string>
    <string name="quota_benifit_address">Quota Beneficiary</string>
    <string name="pledge_time">Lock period</string>
    <string name="about_3_day">Approx 3 days</string>
    <string name="confirm_pledge">Submit to lock</string>
    <string name="pledge_quota_success">Success</string>
    <string name="empty_tx_list">Empty</string>
    <string name="tx_type_register">Registration</string>
    <string name="tx_type_register_update">Update Registration</string>
    <string name="tx_type_cancel_register">Revoke Registration</string>
    <string name="tx_type_extract_reward">Retrieve Rewards</string>
    <string name="tx_type_vote">Voting</string>
    <string name="tx_type_cancel_vote">Revoke Voting</string>
    <string name="tx_type_pledge_quota">Get TPS quota</string>
    <string name="tx_type_cancel_pledge">Withdrawal of staking quota</string>
    <string name="tx_type_mintage">Token Issuance</string>
    <string name="tx_type_cancel_mintage">Withdrawal of staking tokens</string>
    <string name="scan">Scan</string>
    <string name="wallet_name_tag">Account Name</string>
    <string name="failed">Failed</string>
    <string name="complete">Done</string>
    <string name="extract_mnemonic">Export Seed Phrase</string>
    <string name="current_sb_height">Current Height</string>
    <string name="version">Version</string>
    <string name="contact_us">Contact Us</string>
    <string name="vite_org">Vite.org</string>
    <string name="vite_net">Vite.net</string>
    <string name="geting">Loading</string>
    <string name="pledge_record">Locking Record</string>
    <string name="my_pledge_list">Locking Record</string>
    <string name="withdrawTime_suffix">Time available to unlock</string>
    <string name="assign_token">Input Amount</string>
    <string name="input_money_amount">Input Amount</string>
    <string name="change_success">Success</string>
    <string name="net_work_error">Something went wrong with network, please try again later</string>
    <string name="vm_id_collsion">An ID conflict occurs, please re-submit later</string>
    <string name="vm_method_not_found">Built-in contract method not exist, please try again later(-35006)</string>
    <string name="tx_send_too_frequent">Transactions are sent too frequent, please try again later</string>
    <string name="need_reveive_a_tx_before_send">You cannot make any transfer until you receive a transaction.</string>
    <string name="need_reveive_a_tx_before_vote">You cannot vote until you receive a transaction.</string>
    <string name="invalid_sb_height">Snapshot block height is illegal, please try again later</string>
    <string name="verify_failed_by">System verify failed, please try again later</string>
    <string name="backup_wallet">Backup Wallet Account</string>
    <string name="share_qr_code">Share QR code</string>
    <string name="confirm_menmonic">Confirm</string>
    <string name="input_mnemonic_in_order">Please select Mnemonic Words in correct order.</string>
    <string name="check_mnemonic_failed">Incorrect seed phrase!</string>
    <string name="input_password_to_open_app">Auto-Lock</string>
    <string name="backup_later">backup later</string>
    <string name="back_regenerate_mnemonic_alert">This action will regenerate seed phrase, ready to go back?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="forum">Official Forum</string>
    <string name="password_must_at_least_8_char">Password must be at least 8 characters</string>
    <string name="change_name_title">Edit Name</string>
    <string name="update">update</string>
    <string name="check_update">Check for Updates</string>
    <string name="this_is_laster_version">This is the latest version</string>
    <string name="my_vote">My Voting</string>
    <string name="recall">Revoke</string>
    <string name="candidate_sbp_list">Candidate Nodes</string>
    <string name="empty_vote_info">No Vote</string>
    <string name="last_turn_vote_num">Votes</string>
    <string name="snapshot_addr">Address</string>
    <string name="vote">Vote</string>
    <string name="search_sbp_hint">Search by name or address</string>
    <string name="candidate_valid">Active</string>
    <string name="candidate_invalid">Inactive</string>
    <string name="unknown">Unknown</string>
    <string name="voteing">Voting in progress</string>
    <string name="vote_success">Successful Vote</string>
    <string name="vote_invalid">Invalid Vote</string>
    <string name="node_name_tag">Node Name</string>
    <string name="vote_req_send_success">Voting request has successfully sent</string>
    <string name="vote_to_same_sbp">You have already voted for this node</string>
    <string name="make_sure_replace_vote_node">You have voted for %1$s, are you sure to overwrite the result of current
        voting?
    </string>
    <string name="recall_vote">Revoke Voting</string>
    <string name="recalling_vote">Under Revoking</string>
    <string name="recall_vote_req_send_success">Revoking request has successfully sent</string>
    <string name="my_vote_num">My Votes</string>
    <string name="tx_send_success">Success</string>
    <string name="share">share</string>
    <string name="downloading">downloading</string>
    <string name="contract_address">Address</string>
    <string name="contract_tx_title">Transactions</string>
    <string name="warning_of_jump_to_third">Skip to the third party page. Your use of the third party page will apply to
        the user agreement and privacy policy of the third party application. Vite Labs will not assume any
        responsibility.
    </string>
    <string name="nut_discover">Discovery</string>
    <string name="nut_airdrop_can_get">Pick up Now</string>
    <string name="nut_help">help</string>
    <string name="nut_opreation_center_title">Event Center</string>
    <string name="nut_operation_activity_empty">No Event</string>
    <string name="nut_game_title">VITE Games</string>
    <string name="remember_check1">I understand if I lose the mnemonic words, I would never find back my assets.
    </string>
    <string name="remember_check2">I understand if I forget or lose the mnemonic words, nobody can help to recover.
    </string>
    <string name="backup_known_first">Caution! Loss of mnemonic words will result in loss of all digital assets in the wallet.</string>
    <string name="backup_known_second">Importing mnemonic words is the only way to retrieve an account after deleting or reinstalling the App.</string>
    <string name="backup_known_third">Please store your mnemonic words in a safe place.</string>
    <string name="wallet">Wallet</string>
    <string name="tickers">Markets</string>
    <string name="exchange">Trade</string>
    <string name="nut">Discover</string>
    <string name="bottom_asset_title">Asset</string>
    <string name="modify_passphrase">Modify password</string>
    <string name="title_order_filter">Order Filter</string>
    <string name="filter_date_title">Date</string>
    <string name="order_filter_data_all">All</string>
    <string name="filter_coin_title">Pair</string>
    <string name="filter_trade_type">Type</string>
    <string name="filter_status_title">Status</string>
    <string name="clear">Clear</string>
    <string name="order_filter_data_1_day">1 Day</string>
    <string name="order_filter_data_1_week">1 Week</string>
    <string name="order_filter_data_1_month">1 Month</string>
    <string name="order_filter_data_3_months">3 Months</string>
    <string name="order_filter_type_buy">Buy</string>
    <string name="order_filter_type_sell">Sell</string>
    <string name="order_filter_status_ongoing">Ongoing</string>
    <string name="order_filter_status_completed">Completed</string>
    <string name="order_filter_status_cancelled">Cancelled</string>
    <string name="order_filter_status_failed">Failed</string>
</resources>