<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".account.register.MnemonicNoticeActivity">

        <net.vite.wallet.ui.widget.BackButton
            android:id="@+id/backIcon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/fullscreen_top_margin"
            android:src="@drawable/ic_arrow_back_grey_28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleText"
            style="@style/TopMainTitle"
            android:layout_marginStart="24dp"
            android:layout_marginTop="14dp"
            android:text="@string/backup_wallet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backIcon" />

        <LinearLayout
            android:id="@+id/layout0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/titleText">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/hint_blue_cycle"
                android:drawablePadding="6dp"
                android:text="@string/backup_known_first"
                android:textColor="#B33E4A59" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/hint_blue_cycle"
                android:drawablePadding="6dp"
                android:text="@string/backup_known_second"
                android:textColor="#B33E4A59" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/hint_blue_cycle"
                android:drawablePadding="6dp"
                android:text="@string/backup_known_third"
                android:textColor="#B33E4A59" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="30dp"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout0"
            app:srcCompat="@mipmap/backup_wallet_main_icon" />


        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/imageView15">

            <CheckBox
                android:id="@+id/remember1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_check1"
                android:textColor="#733E4A59"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/remember2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/remember_check2"
                android:textColor="#733E4A59"
                android:textSize="14sp" />


        </LinearLayout>


        <TextView
            android:id="@+id/backMnemonic"
            style="@style/BlueBottomBigBtn"
            android:layout_marginStart="11.5dp"
            android:layout_marginTop="137dp"
            android:text="@string/backup_mnemonic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/layout1" />

        <TextView
            android:id="@+id/backupLater"
            style="@style/WhiteBottomBigBtn"
            android:layout_marginEnd="11.5dp"
            android:text="@string/backup_later"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backMnemonic" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>