<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp">


    <net.vite.wallet.ui.widget.BackButton
        android:id="@+id/backIcon"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/fullscreen_top_margin"
        android:src="@drawable/ic_arrow_back_grey_28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewtitle"
        style="@style/TopMainTitleWithBack"
        android:text="@string/modify_passphrase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backIcon" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTxtLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="40dp"
        app:counterEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewtitle"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/passwordEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_password_tag"
            android:imeActionLabel="@string/confirm"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingTop="20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeatPasswordEditTxtLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        app:counterEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTxtLayout"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/repeatPasswordEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_input_txt"
            android:imeActionLabel="@string/confirm"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingTop="20dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/modifyPassphraseBtn"
        style="@style/BlueBottomBigBtn"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
